Fix poster alignment and animation to poster appear added

--- a/demo/canvas-video-player.css
+++ b/demo/canvas-video-player.css
@@ -87,10 +87,11 @@
   left: 0;
   text-align: center;
   z-index: 5;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  overflow: hidden;
+}
+.video-wrapper .canvas-player-poster-wrapper img {
+  transition: opacity .3s ease-out;
+  opacity: 0;
 }
 .video-wrapper .canvas-player-poster-wrapper img.canvas-player-poster {
   height: 100%;
